Prevented slides from sliding to infinity and beyond.

--- a/one/index.html
+++ b/one/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav>
-        <a id="previous" class="material-icons slide-previous">
+        <a id="previous" class="material-icons slide-previous hide">
             chevron_left
         </a>
         <a id="next" class="material-icons slide-next">
