Code preview, base func, wip.

--- a/one/index.html
+++ b/one/index.html
@@ -12,6 +12,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.6.0/highlight.min.js" defer></script>
     <script src="../shared/js/slides.js" defer></script>
+
+    <script src="../shared/js/code-preview.js" type="module"></script>
 </head>
 <body>
     <nav>
@@ -43,16 +45,16 @@
         </section>
         <section>
             <h2> Redundancy in head / layout </h2>
-            <code-preview file="one/index.html" lines="13-20"></code-preview>
+            <!-- <code-preview file="index.html" lines="13-20"></code-preview> -->
         </section>
         <section>
             <h2>Redundancy in slide functionaliy</h2>
-            <code-preview file="one/index.html" lines="13-20"></code-preview>
+            <!-- <code-preview file="index.html" lines="13-20"></code-preview> -->
             <code-preview file="https://hmosvoll.github.io/portal/index.html" lines="13-20"></code-preview>
         </section>
         <section>
             <h2>Redundancy in code preview</h2>
-            <code-preview file="shared/code-previews.js" lines="13-20"></code-preview>
+            <!-- <code-preview file="../shared/js/code-preview.js" lines="13-20"></code-preview> -->
         </section>
     </div>
 </body>
