Code highlight class based on file extension.

--- a/one/index.html
+++ b/one/index.html
@@ -45,16 +45,16 @@
         </section>
         <section>
             <h2> Redundancy in head / layout </h2>
-            <!-- <code-preview file="index.html" lines="13-20"></code-preview> -->
+            <code-preview file="index.html" lines="13-20"></code-preview>
         </section>
         <section>
             <h2>Redundancy in slide functionaliy</h2>
-            <!-- <code-preview file="index.html" lines="13-20"></code-preview> -->
+            <code-preview file="index.html" lines="13-20"></code-preview>
             <code-preview file="https://hmosvoll.github.io/portal/index.html" lines="13-20"></code-preview>
         </section>
         <section>
             <h2>Redundancy in code preview</h2>
-            <!-- <code-preview file="../shared/js/code-preview.js" lines="13-20"></code-preview> -->
+            <code-preview file="../shared/js/code-preview.js" lines="13-20"></code-preview>
         </section>
     </div>
 </body>
