Linenumbers support for code-preview.

--- a/one/index.html
+++ b/one/index.html
@@ -26,8 +26,8 @@
     </nav>
     <div id="slides" class="slides">
         <section>
-            <h1>Presentations</h1>
-            <p>Making it better</p>
+            <h1>Presentation</h1>
+            <p>A presentation about improving upon <a href="https://hmosvoll.github.io/portal/">another presentation</a> 😛</p>
         </section>
         <section>
             <h2>Things to fix</h2>
@@ -45,16 +45,16 @@
         </section>
         <section>
             <h2> Redundancy in head / layout </h2>
-            <code-preview file="index.html" lines="13-20"></code-preview>
+            <code-preview file="index.html" lines="3-17"></code-preview>
         </section>
         <section>
             <h2>Redundancy in slide functionaliy</h2>
-            <code-preview file="index.html" lines="13-20"></code-preview>
-            <code-preview file="https://hmosvoll.github.io/portal/index.html" lines="13-20"></code-preview>
+            <code-preview file="index.html" lines="3-17"></code-preview>
+            <code-preview file="https://hmosvoll.github.io/portal/index.html" lines="10-20"></code-preview>
         </section>
         <section>
             <h2>Redundancy in code preview</h2>
-            <code-preview file="../shared/js/code-preview.js" lines="13-20"></code-preview>
+            <code-preview file="../shared/js/code-preview.js"></code-preview>
         </section>
     </div>
 </body>
