--- a/one/index.html
+++ b/one/index.html
@@ -27,7 +27,7 @@
     <div id="slides" class="slides">
         <section>
             <h1> &lt; Presentation name &gt; </h1>
-            <p>A presentation about improving upon the implementation of <a href="https://hmosvoll.github.io/portal/">another presentation</a> 😛</p>
+            <p>A presentation about improving upon the implementation of <a href="https://hmosvoll.github.io/portal/">another presentation</a></p>
         </section>
         <section>
             <h2>Things to fix</h2>
